# BR-RM

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  pyrefly.toml
.github/workflows/: build-test-publish-wheel.yml  cicd-main.yml
docker/: Dockerfile.ngc_pytorch
docs/: adding-new-models.md  conf.py  index.md  model-quirks.md  nsys-profiling.md  project.json  testing.md
docs/design-docs/: env-vars.md  logger.md  training-backends.md
docs/guides/: dpo.md  rm.md  use-custom-vllm.md
examples/: run_dpo.py  run_grpo_math.py  run_grpo_sliding_puzzle.py  run_rm.py  run_sft.py
examples/configs/: dpo.yaml  grpo-deepscaler-1.5b-24K.yaml  grpo-deepscaler-1.5b-8K.yaml  grpo_deepscaler-1.5b-24K.yaml  grpo_fact.yaml  grpo_math_1B.yaml  grpo_math_1B_megatron.yaml  grpo_math_70B_megatron.yaml  grpo_math_8B.yaml  grpo_math_8B_megatron.yaml  grpo_math_qwen30ba3b_megatron.yaml  grpo_sliding_puzzle.yaml  rm.yaml  sft.yaml  sft_openmathinstruct2.yaml  vlm_grpo_3B.yaml
examples/configs/evals/: eval.yaml
examples/configs/recipes/llm/: dpo-llama3.1-8b-instruct-4n8g-fsdp2tp1.v2.yaml  dpo-llama3.1-8b-instruct-4n8g-fsdp2tp2-quick.v2.yaml  dpo-llama3.1-8b-instruct-4n8g-megatron.yaml  dpo-llama3.1-8b-instruct-4n8g-megatrontp2pp2-quick.yaml  dpo-llama3.1-8b-tulu3-1n8g-fsdp2tp1.yaml  dpo-llama3.2-1b-instruct-1n8g-fsdp2tp1.v2.yaml  dpo-mistral-nemo-instruct-2407-1n8g-fsdp2tp8-actckpt-long.yaml  grpo-deepscaler-1.5b-24K.yaml  grpo-deepscaler-1.5b-8K.yaml  grpo-gemma3-1b-it-1n8g-fsdp2tp1.yaml  grpo-gemma3-27b-it-16n8g-fsdp2tp8sp-actckpt-long.yaml  grpo-gspo-deepscaler-1.5b-8K.yaml  grpo-llama3.1-8b-instruct-1n8g-megatron-fp8.yaml  grpo-llama3.1-8b-instruct-2n8g-fsdp2tp1-noncolocated.yaml  grpo-llama3.1-8b-instruct-4n8g-fsdp2tp1-long.v3.yaml  grpo-llama3.2-1b-instruct-1n8g-fsdp2tp1.v3.yaml  grpo-llama3.2-1b-instruct-1n8g-megatron.yaml  grpo-math-qwen3-30ba3b-megatron-tp4-32k.yaml  grpo-moonlight-16ba3b-4n8g-megatron.yaml  grpo-qwen2.5-32b-32n8g-fsdp2tp8sp-actckpt-long.v3.yaml  grpo-qwen2.5-32b-32n8g-fsdp2tp8sp-actckpt.v3.yaml  grpo-qwen2.5-7b-instruct-4n8g-fsdp2tp4sp.v3.yaml  grpo-qwen2.5-7b-instruct-4n8g-megatron.yaml  grpo-qwen2.5-math-1.5b-instruct-1n8g-fsdp2tp1.v3.yaml  sft-llama3.1-8b-instruct-1n8g-fsdp2tp1-long.v2.yaml  sft-llama3.1-8b-instruct-1n8g-fsdp2tp2sp.v2.yaml  sft-llama3.1-8b-instruct-1n8g-megatron.yaml  sft-llama3.2-1b-1n8g-fsdp2tp1.v2.yaml  sft-qwen2.5-32b-4n8g-fsdp2tp8sp-actckpt.v2.yaml
examples/configs/recipes/vlm/: vlm_grpo-qwen2.5-vl-3b-instruct-clevr-1n2g-dtensor2tp1.v1.yaml  vlm_grpo-smolvlm2-2.2b-instruct-clevr-1n2g-dtensor2tp1.v1.yaml
nemo_rl/algorithms/: dpo.py  grpo.py  interfaces.py  loss_functions.py  rm.py  sft.py  utils.py
nemo_rl/data/: __init__.py  datasets.py  interfaces.py  llm_message_utils.py
nemo_rl/data/hf_datasets/: __init__.py  dpo.py  helpsteer3.py  oai_format_dataset.py  preference_dataset.py  tulu3.py
nemo_rl/data/packing/: __init__.py  algorithms.py  metrics.py
nemo_rl/distributed/: batched_data_dict.py  collectives.py  model_utils.py  named_sharding.py  virtual_cluster.py  worker_group_utils.py  worker_groups.py
nemo_rl/environments/: code_environment.py  fact_environment.py  interfaces.py  math_environment.py
nemo_rl/environments/games/: sliding_puzzle.py
nemo_rl/evals/: eval.py
nemo_rl/experience/: rollouts.py
nemo_rl/models/dtensor/: parallelize.py
nemo_rl/models/generation/: interfaces.py  vllm.py  vllm_backend.py
nemo_rl/models/generation/vllm/: vllm_worker_async.py
nemo_rl/models/huggingface/: common.py
nemo_rl/models/megatron/: common.py  community_import.py  refit_utils.py
nemo_rl/models/megatron/converters/: common.py  deepseek.py  qwen3.py
nemo_rl/models/policy/: __init__.py  dtensor_policy_worker.py  dtensor_policy_worker_v2.py  interfaces.py  lm_policy.py  megatron_policy_worker.py  utils.py
nemo_rl/utils/: checkpoint.py  config.py  flops_formulas.py  flops_tracker.py  logger.py  nsys.py
tests/: json_dump_tb_logs.py
tests/functional/: test_converter_roundtrip.py
tests/test_suites/: nightly.txt  release.txt
tests/test_suites/llm/: dpo-llama3.1-8b-instruct-4n8g-fsdp2tp2-quick.v2.sh  dpo-llama3.1-8b-instruct-4n8g-fsdp2tp4.sh  dpo-llama3.1-8b-instruct-4n8g-megatron.v2.sh  dpo-llama3.1-8b-instruct-4n8g-megatrontp2pp2-quick.sh  dpo-llama3.1-8b-tulu3-1n8g-fsdp2tp1.sh  dpo-llama3.2-1b-instruct-1n8g-fsdp2tp1.v2.sh  dpo-mistral-nemo-instruct-2407-1n8g-fsdp2tp8-actckpt-long.sh  grpo-deepscaler-1.5b-16K.sh  grpo-deepscaler-1.5b-24K.sh  grpo-deepscaler-1.5b-8K.sh  grpo-gemma3-27b-it-16n8g-fsdp2tp8sp-actckpt-long.sh  grpo-gspo-deepscaler-1.5b-8K.sh  grpo-llama3.1-8b-instruct-1n8g-megatron-fp8.sh  grpo-llama3.1-8b-instruct-2n8g-fsdp2tp1-noncolocated.sh  grpo-llama3.1-8b-instruct-4n8g-fsdp2tp1-long.v3.sh  grpo-llama3.2-1b-instruct-1n8g-fsdp2tp1.v3.sh  grpo-llama3.2-1b-instruct-1n8g-megatron.sh  grpo-qwen2.5-32b-32n8g-fsdp2tp8sp-actckpt-long.v3.sh  grpo-qwen2.5-32b-32n8g-fsdp2tp8sp-actckpt.v3.sh  grpo-qwen2.5-7b-instruct-4n8g-fsdp2tp4sp.v3.sh  grpo-qwen2.5-math-1.5b-instruct-1n8g-fsdp2tp1.v3.sh  sft-llama3.1-8b-1n8g-fsdp2tp1-dynamicbatch.sh  sft-llama3.1-8b-1n8g-fsdp2tp1-long.sh  sft-llama3.1-8b-1n8g-fsdp2tp2sp.sh  sft-llama3.1-8b-1n8g-megatron-seqpack.sh  sft-llama3.1-8b-1n8g-megatron.sh  sft-qwen2.5-32b-4n8g-fsdp2tp8sp-actckpt.v3.sh
tests/unit/: __init__.py  test_recipes_and_test_suites.py  test_utils.py
tests/unit/_plugins/: remote_select.py
tests/unit/algorithms/: test_grpo.py  test_loss_functions.py  test_sequence_packing_gradients.py
tests/unit/data/: test_data_processor.py  test_datasets.py  test_llm_message_utils.py
tests/unit/data/hf_datasets/: test_tulu3.py  (+3 more)
tests/unit/distributed/: test_batched_data_dict.py  test_model_utils.py  test_worker_groups.py
tests/unit/environments/: test_math_environment.py
tests/unit/utils/: test_flops_counter.py  test_logger.py  test_native_checkpoint.py
tools/: build-custom-vllm.sh  code_snapshot.sh  find_available_port_ranges.py
tools/model_diagnostics/: 2.long_generation_decode_vs_prefill.py  4.vllm_precision_compilation_test.py
(+9 files in other folders)
